# DL_Resurrect

./: app.db  config.py  main.py  pyproject.toml  upload.py
app/: __init__.py  email.py  errors.py  extinguish.py  forms.py  models.py  routes.py
app/static/css/: style.css
app/static/js/: app.js
app/templates/: _paper.html  _post.html  _priorpost.html  about_page.html  admin.html  ban_user.html  base.html  danger.html  delete_user.html  edit_paper.html  editform.html  editprofile.html  fragments_form.html  fragments_paper.html  full_paper.html  index.html  invite_friend.html  invites.html  login.html  new_paper_form.html  new_password.html  newpost.html  publish_papers.html  resetpwd.html  rules_page.html  signup.html  test_upload.html  upload2.html  user.html
app/templates/emails/: invitation_email.html  invitation_email.txt  invite_friend.html  invite_friend.txt  moderation_email.html  moderation_email.txt  reset_password.html  reset_password.txt
migrations/versions/: ec817f99b4ab_first_migration.py
